2.1.7 (XX-XXX-200X)

  New Features

    - Always remove DomainKey (and similar) headers (1287546) from messages
      sent to the list.

    - List owners can customize content filter behavior as not to collapse
      multipart/alternative to its first content.  This allows HTML part
      to pass through after other content filtering is done.

  Bug fixes and other patches

    - Logging/Logger.py unicode transform option (1235567).

    - bin/update crashes with bogus files (949117).

2.1.6 (30-May-2005)

  Security

    - Critical security patch for path traversal vulnerability in private
      archive script  (CAN-2005-0202).

    - Added the ability for Mailman generated passwords (both member and list
      admin) to be more cryptographically secure.  See new configuration
      variables USER_FRIENDLY_PASSWORDS, MEMBER_PASSWORD_LENGTH, and
      ADMIN_PASSWORD_LENGTH.  Also added a new bin/withlist script called
      reset_pw.py which can be used to reset all member passwords.  Passwords
      generated by Mailman are now 8 characters by default for members, and 10
      characters for list administrators.

    - A potential cross-site scripting hole in the driver script has been
      closed.  Thanks to Florian Weimer for its discovery.  Also, turn
      STEALTH_MODE on by default.

  Internationalization

    - Chinese languages are now supported.  They have been moved from 'big5'
      and 'gb' to 'zh_TW' and 'zh_CN' respectively for compliance to the IANA
      spec.  Note, however, that the character sets were changed from 'Big5'
      or 'GB2312' to 'UTF-8' to cope with the insufficient codecs support in
      Python 2.3 and earlier.  You may have to install Chinese capable codecs
      (like CJKCodecs) separately to handle the incoming messages which are in
      local charsets, or upgrade your Python to 2.4 or newer.

  Behavior or defaults changes

    - VERP_PROBES is disabled by default.
